Created Rest WebApi that talks to DynamoDB database to grab IOT information Created basic asp.net MVC application that talks to Web API to display data

--- a/TemperatureCheck/appsettings.json
+++ b/TemperatureCheck/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "AWS": {
-    "Profile": "my_profile-name",
-    "Region":  "us-west-1"
-  }
+  "AllowedHosts": "*"
 }
