--- a/TemperatureCheck/TemperatureCheck.csproj
+++ b/TemperatureCheck/TemperatureCheck.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.303.2" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.303.4" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DynamoBusiness\DynamoBusiness.csproj" />
+    <ProjectReference Include="..\TempCommon\TempCommon.csproj" />
   </ItemGroup>
 
 </Project>
